metadata-retriever/metadata/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AFL_Teams__c</fullName>
        <description>Lifestyle Information
AFL Teams</description>
        <label>AFL Teams</label>
        <picklist>
            <picklistValues>
                <fullName>Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collingwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essendon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fremantle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geelong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Coast Suns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Western Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawthorn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kangaroos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Kilda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Bulldogs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>MB Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_Date__c</fullName>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_User__c</fullName>
        <label>Add User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <description>Australian Antarctic Territory 
Australian Capital Territory    
Christmas Island    
Cocos (Keeling) Islands 
Coral Sea Islands   
Heard Island and McDonald Islands   
Jervis Bay Territory    
New South Wales 
Norfolk Island  
Northern Territory  
Queensland  
South Australia Tasmania    
Victoria    
Western Australia</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>Address Type</description>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prev Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - 39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 -44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 - 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 -59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 - 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to identify if contact is still alive 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Deceased&quot;</description>
        <label>Alive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Offered_Service__c</fullName>
        <label>Alliance Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Allmakes_Offered_Service__c</fullName>
        <label>Allmakes Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Base_Flex__c</fullName>
        <label>Base Flex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bus_Offered_Service__c</fullName>
        <label>Bus Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allmakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelecTrucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unimog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Star</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CMS_Dealer_BPID__c</fullName>
        <description>/*
Created By Polaris Yu 2013-9-17
Function:
Used By: Report &quot;Monthly Summary: Expiring Contracts&quot;
*/</description>
        <label>CMS Dealer BPID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_SAP_No__c</fullName>
        <description>/* 
Created By Polaris Yu 2013-9-17 
Function: 
Used By: Report &quot;Monthly Summary: Expiring Contracts&quot; 
*/</description>
        <label>CMS SAP No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_No_Brand_Purchases__c</fullName>
        <description>PC &amp; CV No. Brand Purchases: These fields display the amount of purchases for MB PC  or CV the customer has made during the time frame first purchase and today. (frequency of calculation needs to be defined)</description>
        <label>CV No. Brand Purchases</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_Status__c</fullName>
        <description>Needs to be coded:

Status a customer can have in regards to CV. 
Prospect - is interested in CV
Customer - does have at least one CV
Service Only - does have at least one After Sales Record</description>
        <label>CV Status</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CV_Tenure__c</fullName>
        <description>PC &amp; CV tenure: these fields display the endurance the customer stays with MB PC  or CV. Calculation is based on the first purchase date of MB PC  or CV (information available on the customer vehicle relationship) (frequency of calculation needs to be defined)</description>
        <label>CV Tenure</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Sales_Region__c</fullName>
        <description>/*
Created By Polaris Yu 2013-9-11
Function:
Used By: Opt In Counts Reports
*/</description>
        <label>Car Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>STHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cars_Offered_Service__c</fullName>
        <label>Cars Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cars_in_Household__c</fullName>
        <label>Cars in Household</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clicksell__c</fullName>
        <label>Clicksell</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only for person account. Look up to customer company as the contact.</description>
        <label>Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Postal_Address_2_Street_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Postal Address To Street Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_License_Number__c</fullName>
        <defaultValue>&quot;247271&quot;</defaultValue>
        <label>Credit License Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_License__c</fullName>
        <label>Credit License</label>
        <picklist>
            <picklistValues>
                <fullName>Own License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.O.S. License</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Function: Customer Number 
  For Dealer Accounts this field is used for the &quot;DMS magic number&quot;
Used in: Page Layouts, Reports 

Created by: Tony Li    Used by: Tony Li
Attribute in Data Dictionary object Contact is &quot;Contact_MagicNo&quot;</description>
        <displayFormat>1{00000}</displayFormat>
        <label>Customer No.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DD_Bonus_Condition__c</fullName>
        <label>DD Bonus Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_bonus__c</fullName>
        <label>DD bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealer_ABN__c</fullName>
        <label>ABN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_ACN__c</fullName>
        <label>ACN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Account_No_Dlr_Code__c</fullName>
        <label>Account No. Dlr Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Allocation__c</fullName>
        <label>Dealer Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>MBAuP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Alternate_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Anti_bribery_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anti bribery Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_BSB__c</fullName>
        <label>BSB</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_No__c</fullName>
        <label>Bank Account No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank__c</fullName>
        <label>Bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Business_Hours__c</fullName>
        <label>Trading Hours Sales</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_CMS_Dealer_BPID_LCV__c</fullName>
        <label>CMS Dealer BPID LCV</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Car_Service_Region__c</fullName>
        <label>Car Service Region</label>
        <picklist>
            <picklistValues>
                <fullName>STHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTHN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Cars_Dlr_Class_After_Sales__c</fullName>
        <label>Cars Dlr Class After Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provincial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Cars_Dlr_Class_Sales__c</fullName>
        <label>Cars  Dlr Class Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provincial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Cars_OES_Survey_Targets_Yearly__c</fullName>
        <label>Cars OES Survey Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Cars_PES_Targets_Yearly__c</fullName>
        <label>Cars PES Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Cars_POV_Targets_Yearly__c</fullName>
        <label>Cars POV Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Competitors__c</fullName>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Alfa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citroen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hamelex White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iveco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Deere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keenan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenworth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS__c</fullName>
        <label>DMS</label>
        <picklist>
            <picklistValues>
                <fullName>AMWIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS 400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto IT  PMDS Viaduct 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto IT (Equip)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto IT (Units)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Quote plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy Mate (Global Soultions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Solutions – Voyager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Dealer Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leading Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVA - Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds CFS / Dealer Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Titan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unifleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldmine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Dated_Started_Fuso__c</fullName>
        <label>Dated Started Fuso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Dated_Started_MBAuP__c</fullName>
        <label>Dated Started MBAuP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Dealership_Type__c</fullName>
        <label>Dealership Type</label>
        <picklist>
            <picklistValues>
                <fullName>MBAuP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Due_Diligence__c</fullName>
        <label>Due Diligence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Email_System__c</fullName>
        <label>Dealer Email System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fax__c</fullName>
        <label>Dealer Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Financial_Service_Region__c</fullName>
        <label>Financial Service Region</label>
        <picklist>
            <picklistValues>
                <fullName>STHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTHN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Floor_Plan_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floor Plan Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Floor_Plan_Value__c</fullName>
        <label>Floor Plan Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Floor_Plan__c</fullName>
        <label>Floor Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Cars__c</fullName>
        <label>ICC Dealer Code Cars</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Freightliner__c</fullName>
        <label>ICC Dealer Code Freightliner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Fuso__c</fullName>
        <label>ICC Dealer Code Fuso</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_MB_Trucks__c</fullName>
        <label>ICC Dealer Code MB Trucks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Unimog__c</fullName>
        <label>ICC Dealer Code Unimog</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ICC_Dealer_Code_Vans__c</fullName>
        <label>ICC Dealer Code Vans</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_LMS__c</fullName>
        <label>Dealer Portal User</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Licence_Number__c</fullName>
        <label>Dealer Licence Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_MBFS_Review_Date__c</fullName>
        <label>MBFS Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Mobile__c</fullName>
        <label>Dealer Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_New_No_Spare_Parts__c</fullName>
        <label>New No. Spare Parts</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Operating_System_Other__c</fullName>
        <label>Dealer Operating System Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Operating_System__c</fullName>
        <label>Dealer Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>tbd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Postal_Address_Address_Line_1__c</fullName>
        <label>Postal Address Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Postal_Address_Address_Line_2__c</fullName>
        <label>Postal Address Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>